<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Coins</string>

    <string name="action_search">Search</string>

    <string name="sa_title">Settings</string>

    <string name="action_filter">Filter</string>

    <string name="pref_category_notifications">Notifications</string>

    <string name="pref_show_new_merchants">New merchants</string>
    <string name="pref_show_new_merchants_on">Notify about new merchants nearby</string>
    <string name="pref_show_new_merchants_off">Don\'t notify about new merchants</string>

    <string name="pref_area_of_interest">Location</string>
    <string name="pref_area_of_interest_summary">Select your area of interest</string>

    <string name="notification_new_merchant">New merchant in your area</string>
    <string name="notification_new_merchant_no_name">Touch to see where</string>

    <string name="notification_new_merchants_content_title">%1$s new merchants</string>
    <string name="notification_new_merchants_content_text">Touch to see them</string>

    <string name="pref_category_other">Other</string>

    <string name="pref_exchange_rates_provider">Exchange rates source</string>
    <string name="pref_exchange_rates_provider_summary">Select source for obtaining exchange rates between Bitcoin and USD</string>

    <string name="pref_distance_units">Distance units</string>

    <string name="exchange_rate">Exchange rate</string>
    <string name="price_in_dollars" translatable="false">$%1$s</string>
    <string name="bitcoin_price_checked_at">Checked at: %1$s</string>

    <string name="menu_item_all_merchants">All</string>
    <string name="menu_item_atms">ATMs</string>
    <string name="menu_item_cafes">Cafes</string>
    <string name="menu_item_restaurants">Restaurants</string>
    <string name="menu_item_bars">Bars</string>
    <string name="menu_item_hotels">Hotels</string>
    <string name="menu_item_car_washes">Car washes</string>
    <string name="menu_item_gas_stations">Gas stations</string>
    <string name="menu_item_hospitals">Hospitals</string>
    <string name="menu_item_laundry_services">Laundry</string>
    <string name="menu_item_movies">Movies</string>
    <string name="menu_item_parking">Parking</string>
    <string name="menu_item_pharmacies">Pharmacies</string>
    <string name="menu_item_pizza">Pizza</string>
    <string name="menu_item_taxi">Taxi</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help_and_feedback">Help &amp; feedback</string>

    <string name="name_unknown">Unknown</string>

    <string name="loading_address">Loading address…</string>
    <string name="could_not_load_address">Couldn\'t load address</string>

    <string name="not_provided">Not provided</string>

    <string name="share_merchant_message_title">Check it out!</string>
    <string name="share_merchant_message_text">This place accept cryptocurrency: %1$s</string>

    <string name="fa_title">Help &amp; feedback</string>

    <string name="fa_description">Feel free to contact us if you have any questions.</string>
    <string name="fa_data_provided_by">Data provided by:</string>
    <string name="fa_osm_credits">• OpenStreetMap contributors</string>
    <string name="fa_coin_atm_radar_credits">• Coin ATM Radar</string>
    <string name="fa_programming">Programming:</string>
    <string name="fa_programmer_name">Igor Bubelov</string>
    <string name="fa_design">Design:</string>
    <string name="fa_designer_name">Vitaly Yushkov</string>
    <string name="fa_linkedin_profile">LinkedIn profile</string>
    <string name="fa_behance_profile">Behance profile</string>
    <string name="fa_donation_address">Donation address</string>
    <string name="fa_copy_to_clipboard">Copy to clipboard</string>

    <string name="ma_loading_merchants">LOADING MERCHANTS</string>

    <string name="saa_distance">Distance:</string>

    <string name="msa_search">Search</string>

    <string name="msa_distance_kilometers">%1$.2f km</string>
    <string name="msa_distance_miles">%1$.2f mi</string>

    <string-array name="distance_units">
        <item>Automatic</item>
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <string name="merchant_description">Description:</string>
    <string name="merchant_opening_hours">Opening hours:</string>
    <string name="merchant_accepted_currencies">Accepted currencies:</string>

    <string name="cd_donation_qr" translatable="false">QR code for receiving donations</string>
    <string name="cd_bitcoin_logo" translatable="false">Bitcoin logo</string>
    <string name="cd_update_exchange_rate" translatable="false">Refresh exchange rate</string>

</resources>