<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_notifications">

        <SwitchPreference
            android:key="@string/pref_show_new_merchants_key"
            android:title="@string/pref_show_new_merchants"
            android:summaryOn="@string/pref_show_new_merchants_on"
            android:summaryOff="@string/pref_show_new_merchants_off"
            android:defaultValue="true" />

        <Preference
            android:dependency="@string/pref_show_new_merchants_key"
            android:key="@string/pref_area_of_interest_key"
            android:title="@string/pref_area_of_interest"
            android:summary="@string/pref_area_of_interest_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Other">

        <ListPreference
            android:key="@string/pref_exchange_rates_provider_key"
            android:title="@string/pref_exchange_rates_provider"
            android:summary="@string/pref_exchange_rates_provider_summary"
            android:entries="@array/exchange_rates_sources"
            android:entryValues="@array/exchange_rates_sources_values"
            android:defaultValue="BITSTAMP" />

    </PreferenceCategory>

</PreferenceScreen>