<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_description"
            android:textColor="@color/text"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_data_provided_by"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:id="@+id/osm_contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_osm_credits"
            android:textColor="@color/link"
            app:typeface="regular" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:id="@+id/coin_atm_radar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_coin_atm_radar_credits"
            android:textColor="@color/link"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_programming"
            android:textColor="@color/secondary_text_or_icons"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_programmer_name"
            android:textColor="@color/text"
            app:typeface="regular" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ibubelov@gmail.com"
            android:textColor="@color/text"
            app:typeface="regular"
            tools:ignore="HardcodedText" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:id="@+id/developer_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/fa_linkedin_profile"
            android:textColor="@color/link"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_design"
            android:textColor="@color/secondary_text_or_icons"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_designer_name"
            android:textColor="@color/text"
            app:typeface="regular" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hi@turboyushkov.ru"
            android:textColor="@color/text"
            app:typeface="regular"
            tools:ignore="HardcodedText" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:id="@+id/designer_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/fa_behance_profile"
            android:textColor="@color/link"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.bubelov.coins.ui.widget.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fa_donation_address"
            android:textColor="@color/secondary_text_or_icons"
            app:typeface="regular" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/donation_qr" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <Button
            android:id="@+id/copy_donation_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fa_copy_to_clipboard" />

    </LinearLayout>

</ScrollView>